Changing names to Maxcoin and MAX

--- a/wallet/res/values-de/values.xml
+++ b/wallet/res/values-de/values.xml
@@ -2,11 +2,11 @@
 <resources>
 
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8 Dezimalen</item>
-		<item>DGC, 6 Dezimalen</item>
-		<item>DGC, 4 Dezimalen</item>
-		<item>mDGC, 2 Dezimalen</item>
-		<item>µDGC, keine Dezimalen</item>
+		<item>MAX, 8 Dezimalen</item>
+		<item>MAX, 6 Dezimalen</item>
+		<item>MAX, 4 Dezimalen</item>
+		<item>mMAX, 2 Dezimalen</item>
+		<item>µMAX, keine Dezimalen</item>
 	</string-array>
 
 </resources>
