--- a/wallet/res/values-fi/strings_help.xml
+++ b/wallet/res/values-fi/strings_help.xml
@@ -67,7 +67,7 @@
 		</p>
 		<p>
 			Voit asettaa maksun olematta verkossa, eli ollessasi offlinessa.
-			Se lähetetään käynnistäessäsi Digitalcoin Wallet:in uudestaan seuraavan kerran.
+			Se lähetetään käynnistäessäsi MaxCoin Wallet:in uudestaan seuraavan kerran.
 			Jos haluat maksun menevän mahdollisimman nopeasti, varmista, että sinulla on hyvä yhteys (kuten WLAN).
 		</p>
 		<p>
