--- a/wallet/res/values-da/values.xml
+++ b/wallet/res/values-da/values.xml
@@ -2,11 +2,11 @@
 <resources>
 
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8 decimaler</item>
-		<item>DGC, 6 decimaler</item>
-		<item>DGC, 4 decimaler</item>
-		<item>mDGC, 2 decimaler</item>
-		<item>µDGC, uden decimaler</item>
+		<item>MAX, 8 decimaler</item>
+		<item>MAX, 6 decimaler</item>
+		<item>MAX, 4 decimaler</item>
+		<item>mMAX, 2 decimaler</item>
+		<item>µMAX, uden decimaler</item>
 	</string-array>
 
 </resources>
