--- a/wallet/res/values-es/values.xml
+++ b/wallet/res/values-es/values.xml
@@ -2,11 +2,11 @@
 <resources>
 
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8 dígitos</item>
-		<item>DGC, 6 dígitos</item>
-		<item>DGC, 4 dígitos</item>
-		<item>mDGC, 2 dígitos</item>
-		<item>µDGC, sin dígitos</item>
+		<item>MAX, 8 dígitos</item>
+		<item>MAX, 6 dígitos</item>
+		<item>MAX, 4 dígitos</item>
+		<item>mMAX, 2 dígitos</item>
+		<item>µMAX, sin dígitos</item>
 	</string-array>
 
 </resources>
