--- a/wallet/res/values-fr/values.xml
+++ b/wallet/res/values-fr/values.xml
@@ -2,11 +2,11 @@
 <resources>
 
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8 décimales</item>
-		<item>DGC, 6 décimales</item>
-		<item>DGC, 4 décimales</item>
-		<item>mDGC, 2 décimales</item>
-		<item>µDGC, 0 décimale</item>
+		<item>MAX, 8 décimales</item>
+		<item>MAX, 6 décimales</item>
+		<item>MAX, 4 décimales</item>
+		<item>mMAX, 2 décimales</item>
+		<item>µMAX, 0 décimale</item>
 	</string-array>
 
 </resources>
