--- a/wallet/res/values-zh-rTW/values.xml
+++ b/wallet/res/values-zh-rTW/values.xml
@@ -2,11 +2,11 @@
 <resources>
 
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8位數</item>
-		<item>DGC, 6位數</item>
-		<item>DGC, 4位數</item>
-		<item>mDGC, 2位數</item>
-		<item>µDGC, 0位數</item>
+		<item>MAX, 8位數</item>
+		<item>MAX, 6位數</item>
+		<item>MAX, 4位數</item>
+		<item>mMAX, 2位數</item>
+		<item>µMAX, 0位數</item>
 	</string-array>
 
 </resources>
