--- a/wallet/res/values/values.xml
+++ b/wallet/res/values/values.xml
@@ -16,11 +16,11 @@
 		<item>0/6</item>
 	</string-array>
 	<string-array name="preferences_precision_labels">
-		<item>DGC, 8 digits</item>
-		<item>DGC, 6 digits</item>
-		<item>DGC, 4 digits</item>
-		<item>mDGC, 2 digits</item>
-		<item>µDGC, no digits</item>
+		<item>MAX, 8 digits</item>
+		<item>MAX, 6 digits</item>
+		<item>MAX, 4 digits</item>
+		<item>mMAX, 2 digits</item>
+		<item>µMAX, no digits</item>
 	</string-array>
 
 </resources>
