--- a/wallet/res/values-fr/strings_help.xml
+++ b/wallet/res/values-fr/strings_help.xml
@@ -7,7 +7,7 @@
 			Toquez pour vous rendre vers la liste des monnaies nationales et tapez sur l\'une d\'elles pour la choisir par défaut.
 		</p>
 		 <p>
-			Le QR code à droite contient votre adresse Digitalcoin et peut être balayé par un tiers.
+			Le QR code à droite contient votre adresse MaxCoin et peut être balayé par un tiers.
 			Toquez sur le code QR pour l\'agrandir.
 		</p>
 		<p>
