--- a/wallet/res/values-it/strings_help.xml
+++ b/wallet/res/values-it/strings_help.xml
@@ -39,7 +39,7 @@
 		<p>
 			Poi puoi generare dei codici QR da far acquisire all\'altra persona.
 			Oppure puoi inviare la richiesta con il tasto \"condividi\" nella barra azioni.
-			La persona che riceve la richiesta dovrà cliccare l\'URL Digitalcoin.
+			La persona che riceve la richiesta dovrà cliccare l\'URL MaxCoin.
 		</p>
 		<p>
 			In ogni modo alla persona ricevente verrà presentata un modulo precompilato per inviare i digitalcoin.
