--- a/wallet/res/values-ca/strings_help.xml
+++ b/wallet/res/values-ca/strings_help.xml
@@ -3,7 +3,7 @@
   <string name="help_wallet">
 <![CDATA[
 		<p>
-			La part superior esquerra de la pantalla mostra l\'adreça Digitalcoin que has seleccionat, que és la que ha de conèixer l\'altra gent per a poder enviar-te Digitalcoins.
+			La part superior esquerra de la pantalla mostra l\'adreça MaxCoin que has seleccionat, que és la que ha de conèixer l\'altra gent per a poder enviar-te MaxCoins.
 			Prem per canviar l\'adreça.
 		</p>
 		<p>
@@ -30,15 +30,15 @@
   <string name="help_request_coins">
 <![CDATA[
 		<p>
-			Utilitzant aquest guió, pots demanar monedes a una altra persona (que també ha de tenir la Cartera Digitalcoin instal·lada).
+			Utilitzant aquest guió, pots demanar monedes a una altra persona (que també ha de tenir la Cartera MaxCoin instal·lada).
 		</p>
 		<p>
-			Primer, hauràs d\'anotar la quantitat de Digitalcoins a sol·licitar.
+			Primer, hauràs d\'anotar la quantitat de MaxCoins a sol·licitar.
 		</p>
 		<p>
 			Llavors, els dos tindreu el codi QR que haurà d\'escanejar l\'altra persona.
 			O bé, pots enviar la teva sol·licitud a una persona que es troba lluny, mitjançant el botó de compartir a la barra d\'accions.
-			L\'altra persona tindrà que prémer l\'enllaç Digitalcoin.
+			L\'altra persona tindrà que prémer l\'enllaç MaxCoin.
 		</p>
 		<p>
 			De totes dos maneres, l\'altra persona rebrà un diàleg per a enviar monedes amb tots els camps pre-omplerts.
@@ -50,15 +50,15 @@
 <![CDATA[
 		<p>
 			Has començat el procés per a enviar monedes.
-			Has arribat aquí a través de la pantalla principal o premen una adreça Digitalcoin del navegador del mòbil.
+			Has arribat aquí a través de la pantalla principal o premen una adreça MaxCoin del navegador del mòbil.
 		</p>
 		<p>
-			Primerament, entra l\'adreça Digitalcoin a la que vols pagar.
+			Primerament, entra l\'adreça MaxCoin a la que vols pagar.
 			L\'adreça es completarà automàticament si ja hi ha entrades coincidents a la teva llibreta d\'adreces.
-			També pots escanejar codis QR que continguen adreces Digitalcoin o demanar Digitalcoins premen el botó QR de la barra d\'acció.
+			També pots escanejar codis QR que continguen adreces MaxCoin o demanar MaxCoins premen el botó QR de la barra d\'acció.
 		</p>
 		<p>
-			Seguidament, pots veure quants Digitalcoins pots gastar en aquest moment.
+			Seguidament, pots veure quants MaxCoins pots gastar en aquest moment.
 			Qualsevol diferencia de balanç sobre la pantalla principal, significa que no està confirmat i per això encara no pot ser gastat.
 		</p>
 		<p>
@@ -66,7 +66,7 @@
 		</p>
 		<p>
 			Pots introduir un pagament mentre estigues fora de línia.
-			S\'enviarà la següent vegada que s\'inicie la Cartera Digitalcoin.
+			S\'enviarà la següent vegada que s\'inicie la Cartera MaxCoin.
 			Si vols que un pagament sigui processat tant ràpid com sigui possible, assegurat que estas ben connectat. (per ex. en una WLAN)
 		</p>
 		<p>
@@ -82,8 +82,8 @@
 			<b>Avisos importants de seguretat:</b>
 		</p>
 		<p>
-			Els Digitalcoins estan emmagatzemats al dispositiu.
-			<b>Si el perds, perdràs tots els teus Digitalcoins.</b>
+			Els MaxCoins estan emmagatzemats al dispositiu.
+			<b>Si el perds, perdràs tots els teus MaxCoins.</b>
 		</p>
 		<p>
 			Això vol dir que necessites <b>fer una còpia de seguretat de la teva cartera</b>!
@@ -91,12 +91,12 @@
 			Conserva la teva còpia de seguretat segura i recorda la teva paraula de pas.
 		</p>
 		<p>
-			<b>Abans de desinstal·lar</b> (o esborrar les dades de l\'aplicació/formatar el teu dispositiu), <b>transfereix els teus Digitalcoins cap a una altra cartera</b>.
-			Els Digitalcoins que es queden es perdran.
+			<b>Abans de desinstal·lar</b> (o esborrar les dades de l\'aplicació/formatar el teu dispositiu), <b>transfereix els teus MaxCoins cap a una altra cartera</b>.
+			Els MaxCoins que es queden es perdran.
 		</p>
 		<p>
 			<b>Els pagaments són irreversibles</b>.
-			Si envies els teus Digitalcoins al buit, no hi ha forma de fer-los tornar.
+			Si envies els teus MaxCoins al buit, no hi ha forma de fer-los tornar.
 		</p>
 		<p>
 			<b>Conserva el teu dispositiu mòbil segur!</b>
