--- a/wallet/res/values-de/strings_help.xml
+++ b/wallet/res/values-de/strings_help.xml
@@ -4,7 +4,7 @@
 	<string name="help_wallet">
 <![CDATA[
 		<p>
-			Im linken oberen Teil des Bildschirms wird dein aktuelles Guthaben in Digitalcoin und einer ausgewählten Währung angezeigt.
+			Im linken oberen Teil des Bildschirms wird dein aktuelles Guthaben in MaxCoin und einer ausgewählten Währung angezeigt.
 			Mit einem Tap darauf gelangst du in die Liste der verfügbaren Währungen, ein weiterer Tap auf eine der Währungen setzt sie als Standardwährung.
 		</p>
 		<p>
