--- a/wallet/res/values-nb/strings_help.xml
+++ b/wallet/res/values-nb/strings_help.xml
@@ -7,7 +7,7 @@
 			Trykk for å gå til listen over nasjonale valutaer, og trykk på en av valutaene for å velge den som standard.
 		</p>
 		<p>
-			QR-koden til høyre inneholder din Digitalcoin-adresse og kan brukes til skanning av noen andre.
+			QR-koden til høyre inneholder din MaxCoin-adresse og kan brukes til skanning av noen andre.
 			Trykk på QR-koden for å få en større versjon av den.
 		</p>
 		<p>
@@ -33,7 +33,7 @@
     <p>
       Etterpå får du enten QR-koden skannet av den andre personen,
       eller så kan du sende en forespørsel til en person langt unna med del-knappen i handlingsfeltet.
-      Den andre personen skal klikke på Digitalcoin-URLen.
+      Den andre personen skal klikke på MaxCoin-URLen.
     </p>
     <p>
       Den andre personen vil bli presentert en dialog for å sende mynter med alle felt forhåndsutfylt.
@@ -45,12 +45,12 @@
 <![CDATA[
     <p>
       Du har startet prosessen med å sende mynter.
-      Du kom hit enten via hovedskjermen eller ved å klikke på en Digitalcoin-URL i nettleseren på mobilen.
+      Du kom hit enten via hovedskjermen eller ved å klikke på en MaxCoin-URL i nettleseren på mobilen.
     </p>
     <p>
-      Først skriver du inn den Digitalcoin-adressen du vil betale til.
+      Først skriver du inn den MaxCoin-adressen du vil betale til.
       Adressen vil automatisk fylles ut fra kjente oppføringer i adresseboken din.
-      Du kan også skanne QR-koder med Digitalcoin-adresser eller Digitalcoin-forespørsler ved å trykke på QR-knappen i handlingsfeltet.
+      Du kan også skanne QR-koder med MaxCoin-adresser eller MaxCoin-forespørsler ved å trykke på QR-knappen i handlingsfeltet.
     </p>
     <p>
       Deretter kan du se hvor mange digitalcoins du kan bruke for øyeblikket.
@@ -77,7 +77,7 @@
       <b>Viktige sikkerhetsmerknader:</b>
     </p>
     <p>
-      Digitalcoins er lagret på enheten.
+      MaxCoins er lagret på enheten.
       <b>Hvis du mister den, mister du dine digitalcoins.</b>
     </p>
     <p>
