--- a/wallet/res/values-pt-rBR/strings_help.xml
+++ b/wallet/res/values-pt-rBR/strings_help.xml
@@ -3,7 +3,7 @@
   <string name="help_wallet">
 <![CDATA[
 		<p>
-			A parte superior esquerda da tela exibe o seu endereço de Digitalcoin selecionado, para que outras pessoas possam enviar-lhe Digitalcoins.
+			A parte superior esquerda da tela exibe o seu endereço de MaxCoin selecionado, para que outras pessoas possam enviar-lhe MaxCoins.
 			Toque para trocar o endereço.
 		</p>
 		<p>
@@ -33,12 +33,12 @@
 			Usando essa tela, você consegue requisitar moedas de outra pessoa (que também já tenha instalado a MaxCoin Wallet).
 		</p>
 		<p>
-			Primeiro, você insere uma quantidade de Digitalcoins a ser solicitada.
+			Primeiro, você insere uma quantidade de MaxCoins a ser solicitada.
 		</p>
 		<p>
 			Então, você terá gerado um QR code que deve ser scaneado por outra pessoa.
 			Ou, você pode enviar sua solicitação para uma pessoa remotamente, usando o botão compartilhar que está não barra de ações.
-			A outra pessoa deverá clicar na Digitalcoin URL.
+			A outra pessoa deverá clicar na MaxCoin URL.
 		</p>
 		<p>
 			De qualquer maneira, a outra pessoa vai ser apresentada uma caixa de diálogo para o envio de moedas com todos os campos pré-preenchidos.
@@ -50,15 +50,15 @@
 <![CDATA[
 		<p>
 			Você iniciou o processo de envio de moedas.
-			Você veio aqui, quer através da tela principal ou clicando em uma URL Digitalcoin no seu nabegador mobile.
+			Você veio aqui, quer através da tela principal ou clicando em uma URL MaxCoin no seu nabegador mobile.
 		</p>
 		<p>
-			Primeiro insira o endereço Digitalcoin para o qual quer realizar o pagamento.
+			Primeiro insira o endereço MaxCoin para o qual quer realizar o pagamento.
 			O endereço será completado automaticamente através de entradas conhecidas em seu catálogo de endereços.
-			Você também pode escanear QR codes com endereços Digitalcoin ou requisitar pressionando o botão QR na barra de ações.
+			Você também pode escanear QR codes com endereços MaxCoin ou requisitar pressionando o botão QR na barra de ações.
 		</p>
 		<p>
-			Em seguida, você pode ver quantas Digitalcoins você pode gasta no momento.
+			Em seguida, você pode ver quantas MaxCoins você pode gasta no momento.
 			Qualquer diferença para o saldo da tela principal ainda não está confirmado e pode ainda não ser gasto.
 		</p>
 		<p>
@@ -82,8 +82,8 @@
 			<b>Notas importantes sobre segurança:</b>
 		</p>
 		<p>
-			Digitalcoins são armazenadas no dispositivo.
-			<b>Se você o perder, também perde suas Digitalcoins.</b>
+			MaxCoins são armazenadas no dispositivo.
+			<b>Se você o perder, também perde suas MaxCoins.</b>
 		</p>
 		<p>
 			Isso significa que você tem que fazer um <b>back up de sua carteira</b>!
@@ -91,12 +91,12 @@
 			Mantenha o seu backup seguro e lembre a senha.
 		</p>
 		<p>
-			<b>Antes de Instalar</b> (ou limpar as informações do app ou realizar um reset em seu dispositivo), <b>transfira seus Digitalcoins para outra carteira</b>.
-			Digitalcoins restantes serão perdidas.
+			<b>Antes de Instalar</b> (ou limpar as informações do app ou realizar um reset em seu dispositivo), <b>transfira seus MaxCoins para outra carteira</b>.
+			MaxCoins restantes serão perdidas.
 		</p>
 		<p>
 			<b>Pagamentos são irreversíveis</b>.
-			Se você enviar seus Digitalcoins no vazio, não há quase nenhuma maneira de obtê-los de volta.
+			Se você enviar seus MaxCoins no vazio, não há quase nenhuma maneira de obtê-los de volta.
 		</p>
 		<p>
 			<b>Mantenha o seu dispositivo mobile seguro!</b>
