--- a/wallet/res/values-ru/strings_help.xml
+++ b/wallet/res/values-ru/strings_help.xml
@@ -3,7 +3,7 @@
   <string name="help_wallet">
 <![CDATA[
 		<p>
-			В верхней левой части экрана отображается ваш баланс в Digitalcoin и выбранной валюте.
+			В верхней левой части экрана отображается ваш баланс в MaxCoin и выбранной валюте.
 			Нажмите чтобы перейти к списку валют, выберите из него валюту по умолчанию.
 		</p>
 		<p>
