--- a/wallet/res/values-sv/strings_help.xml
+++ b/wallet/res/values-sv/strings_help.xml
@@ -33,7 +33,7 @@
 		<p>
 			Sedan kan den andra personen scanna QR-koden.
 			Eller så använder du \"Dela\" knappen i aktivitetslistan för att skicka din uppmaning att skicka digitalcoin.
-			Den andra personen behöver sedan bara klicka på den Digitalcoin-URL du skickat.
+			Den andra personen behöver sedan bara klicka på den MaxCoin-URL du skickat.
 		</p>
 		<p>
 			Sedan kommer den andra personen att få se en dialogruta där alla fält redan är ifyllda.
@@ -45,12 +45,12 @@
 <![CDATA[
 		<p>
 			Du har påbörjat skickandet av digitalcoin.
-			Du kom hit från huvudskärmen eller genom att klicka på en Digitalcoin-URL i din webbläsare.
+			Du kom hit från huvudskärmen eller genom att klicka på en MaxCoin-URL i din webbläsare.
 		</p>
 		<p>
 			Ange först vilken digitalcoin adress du vill skicka till.
 			Adressen kan automatiskt fyllas i om den börjar med någon av adresserna i din adressbok.
-			Du kan också scanna en QR-kod innehållande en Digitalcoin-adress, genom att trycka på QR knappen i aktivitetslistan.
+			Du kan också scanna en QR-kod innehållande en MaxCoin-adress, genom att trycka på QR knappen i aktivitetslistan.
 		</p>
 		<p>
 			Sedan kan du se hur många digitalcoin du för tillfället kan skicka.
