--- a/wallet/res/values/strings_help.xml
+++ b/wallet/res/values/strings_help.xml
@@ -4,7 +4,7 @@
 	<string name="help_wallet">
 <![CDATA[
 		<p>
-			The upper left part of the screen displays your balance in Digitalcoins and one selected national currency.
+			The upper left part of the screen displays your balance in MaxCoins and one selected national currency.
 			Tap to go to the list of national currencies, and tap on one of the currencies to select it as default.
 		</p>
 		<p>
